# docs/swagger.json
@@ -58,6 +58,11 @@
         },
         "/users/me": {
             "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
                 "tags": [
                     "user"
                 ],
@@ -109,13 +114,19 @@
                 ],
                 "parameters": [
                     {
-                        "description": "query params",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.listWebRequest"
-                        }
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "pageID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "maximum": 10,
+                        "minimum": 5,
+                        "type": "integer",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -215,24 +226,6 @@
                 }
             }
         },
-        "api.listWebRequest": {
-            "type": "object",
-            "required": [
-                "pageID",
-                "pageSize"
-            ],
-            "properties": {
-                "pageID": {
-                    "type": "integer",
-                    "minimum": 1
-                },
-                "pageSize": {
-                    "type": "integer",
-                    "maximum": 10,
-                    "minimum": 5
-                }
-            }
-        },
         "api.listWebResponse": {
             "type": "object",
             "properties": {
@@ -246,6 +239,14 @@
         },
         "api.loginUserRedirectResponse": {
             "type": "object",
+            "required": [
+                "access_token",
+                "access_token_expires_at",
+                "refresh_token",
+                "refresh_token_expires_at",
+                "session_id",
+                "user"
+            ],
             "properties": {
                 "access_token": {
                     "type": "string"
@@ -307,6 +308,12 @@
         },
         "api.userResponse": {
             "type": "object",
+            "required": [
+                "created_at",
+                "email",
+                "id",
+                "password_changed_at"
+            ],
             "properties": {
                 "created_at": {
                     "type": "string"
